# RAG

./: .gitignore  pinecone.ipynb  pyproject.toml
