[project]
name = "chromadb-txt-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.0.15",
    "db>=0.1.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "openai>=1.97.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
